2012-08-19  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/bin/Makefile.am:
	* src/lib/Makefile.am:
	* src/lib/dlfcn/:
	Less automake stuff.

	* src/lib/gdtoa/gdtoaimp.h:
	fix redundant declarations.

2012-07-21  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Makefile.am:
	* src/lib/dlfcn/Makefile.am:
	work around a problem with libtool and the creation
	of the DLL. libtool developpers should be impaled.

2012-07-20  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/bin/Makefile.am:
	* src/lib/Makefile.am:
	Fix compilation with mingw-w64 gcc 4.8

2012-07-03  Vincent Torri  <doursse at users dot sf dot net>

	* AUTHORS:
	* src/lib/evil_stdlib.c:
	* src/lib/evil_stdlib.h:
	Update realpath() code, based on Keith Marshall's implementation.

2012-04-26  Vincent Torri  <doursse at users dot sf dot net>

	* NEWS:
	* src/lib/evil_langinfo.c:
	Fix nl_langinfo(RADIXCHAR).

2012-04-20  Vincent Torri  <doursse at users dot sf dot net>

	* NEWS:
	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	Add strcasestr() API.

2012-04-12  Vincent Torri  <doursse at users dot sf dot net>

	* NEWS:
	* src/lib/evil_time.c:
	* src/lib/evil_time.h:
	Do not declare and define localtime_r() if it's already defined.

2012-03-30  Vincent Torri  <doursse at users dot sf dot net>

	* NEWS:
	* configure.ac:
	Prepare 1.1 release.

	* src/lib/Evil.h:
	Add S_ISLNK macro (always set to 0).

2012-02-23  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Makefile.am:
	* src/lib/evil_pformata.c:
	* src/lib/evil_printa.c:
	* src/lib/gdtoa (added):
	* src/lib/gdtoa/gdtoa.c (added):
	* src/lib/gdtoa/dmisc.c (added):
	* src/lib/gdtoa/gdtoa_fltrnds.h (added):
	* src/lib/gdtoa/ulp.c (added):
	* src/lib/gdtoa/g_dfmt.c (added):
	* src/lib/gdtoa/gmisc.c (added):
	* src/lib/gdtoa/g_ffmt.c (added):
	* src/lib/gdtoa/gdtoa.h (added):
	* src/lib/gdtoa/sum.c (added):
	* src/lib/gdtoa/gdtoaimp.h (added):