@@ -1,3 +1,12 @@
+2012-08-20  Vincent Torri  <doursse at users dot sf dot net>
+
+	* configure.ac:
+	quoting.
+
+	* Makefile.am:
+	* src/lib/Makefile.am:
+	fix distcheck
+
 2012-08-19  Vincent Torri  <doursse at users dot sf dot net>
 
 	* configure.ac:
